# rumik-assessment

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_ui.html
app/: config.py  main.py
app/analytics/: logger.py  pipeline.py  slow_op.py
app/api/: middleware.py  routes.py
app/balancer/: health.py  pools.py  router.py
app/db/: indexes.py  mongo.py  queries.py  redis.py
app/models/: __init__.py  message.py  personality.py  session.py  user.py
app/ratelimit/: limiter.py  middleware.py  responses.py
app/safety/: filter.py  responses.py
app/workers/: processor.py
scripts/: benchmark.py  seed.py  test_all_tiers.sh
test_results/: load_test_results.txt
tests/: conftest.py  test_analytics.py  test_balancer.py  test_integration.py  test_load.py  test_queries.py  test_ratelimit.py  test_safety.py
